src/objects/Quarterly_Financials__c.object
<CustomObject>
    <fields>
        <fullName>Bookings_Target__c</fullName>
        <formula>Financial_Target__r.Bookings_Target__c</formula>
        <label>FY Bookings Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Target__c</fullName>
        <label>Financial Target</label>
        <referenceTo>Goals_Results__c</referenceTo>
        <relationshipName>Quarterly_Financials</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GM_Target__c</fullName>
        <formula>Financial_Target__r.GM_Target__c</formula>
        <label>FY GM % Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue_Target__c</fullName>
        <formula>Financial_Target__r.Gross_Revenue_Goal__c</formula>
        <label>FY Gross Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Revenue_Target__c</fullName>
        <formula>Financial_Target__r.Net_Revenue_Goal__c</formula>
        <label>FY Net Revenue Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <formula>TEXT(Quarterly_Review__r.Review_Period__c )</formula>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Financials_link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  Id ,  Period__c + &apos; | &apos; + TEXT(Geography__c)  , &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Financials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review__c</fullName>
        <label>Quarterly Review</label>
        <referenceTo>Qtr_Review__c</referenceTo>
        <relationshipName>Quarterly_Financials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>YTD_Bookings__c</fullName>
        <label>YTD Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_GM__c</fullName>
        <label>YTD GM %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YTD_Gross_Revenue__c</fullName>
        <label>YTD Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Net_Revenue__c</fullName>
        <label>YTD Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Quarterly Financial Results</label>
    <nameField>
        <displayFormat>QF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Financial Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>